# unquad

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.dev  requirements.txt  test_batch_gen.py
docs/paper/: paper.bib  paper.md
docs/pypi/: README.md
docs/source/: conf.py  contributing.md  index.md  index.rst  installation.md  quickstart.md
docs/source/_autosummary_core/: unquad.data.load.load_fraud.rst  unquad.data.load.load_shuttle.rst  unquad.data.load.rst  unquad.estimation.conformal.ConformalDetector.rst  unquad.estimation.conformal.rst  unquad.estimation.properties.configuration.DetectorConfig.rst  unquad.estimation.weighted_conformal.WeightedConformalDetector.rst  unquad.estimation.weighted_conformal.rst  unquad.strategy.bootstrap.Bootstrap.rst  unquad.strategy.bootstrap.rst  unquad.strategy.cross_val.CrossValidation.rst  unquad.strategy.cross_val.rst  unquad.strategy.jackknife.Jackknife.rst  unquad.strategy.jackknife.rst  unquad.strategy.split.Split.rst  unquad.strategy.split.rst  unquad.utils.metrics.false_discovery_rate.rst  unquad.utils.metrics.statistical_power.rst  unquad.utils.statistical.calculate_p_val.rst
docs/source/_templates/autosummary/: class.rst  function.rst  module.rst
docs/source/examples/: bootstrap_conformal.md  classical_conformal.md  cross_val_conformal.md  evt_conformal.md  extreme_conformal.md  fdr_control.md  index.rst  jackknife_conformal.md  weighted_conformal.md
docs/source/user_guide/: batch_evaluation.md  best_practices.md  conformal_inference.md  conformalization_strategies.md  evt_conformal.md  extreme_conformal.md  fdr_control.md  index.rst  statistical_concepts.md  streaming_evaluation.md  troubleshooting.md  weighted_conformal.md
examples/: abod.py  autoencoder.py  cd.py  conformal.py  copod.py  data_generators.py  dif.py  ecod.py  extreme_conformal.py  gmm.py  hbos.py  iforest.py  inne.py  isolation_forest.py  kde.py  knn.py  knn_mahalanobis.py  kpca.py  lmdd.py  local_outlier_factor.py  loci.py  loda.py  lof.py  lscp.py  lunar.py  mad.py  mcd.py  ocsvm.py  pca.py  qmcd.py  rod.py  sod.py  standard_conformal.py  suod.py  weighted_conformal.py
examples/pyod/: abod.py  autoencoder.py  cd.py  copod.py  dif.py  ecod.py  gmm.py  hbos.py  iforest.py  inne.py  kde.py  knn.py  knn_mahalanobis.py  kpca.py  lmdd.py  loci.py  loda.py  lof.py  lscp.py  lunar.py  mad.py  mcd.py  ocsvm.py  pca.py  qmcd.py  rod.py  sod.py
noncon/enums/: adjustment.py  method.py
noncon/estimator/: conformal.py
noncon/evaluation/: metrics.py
nonconform/: __init__.py
nonconform/estimation/: base.py  extreme_conformal.py  standard_conformal.py  weighted_conformal.py
nonconform/strategy/: bootstrap.py  cross_val.py  jackknife.py  split.py
nonconform/utils/: __init__.py  logging.py
nonconform/utils/data/: __init__.py  load.py
nonconform/utils/data/generator/: __init__.py  base.py  batch.py  online.py
nonconform/utils/func/: __init__.py  enums.py  params.py
nonconform/utils/stat/: __init__.py  aggregation.py  extreme.py  metrics.py  statistical.py
tests/: test_bootstrap.py  test_cross_val.py  test_jackknife.py  test_split.py
tests/datasets/: loader.py
tests/experimental/: experimental.py
tests/functional/: test_bootstrap.py  test_cross_val.py  test_data_generator.py  test_extreme_split.py  test_jackknife.py  test_split.py  test_standard_bootstrap.py  test_standard_cross_val.py  test_standard_jackknife.py  test_standard_split.py  test_weighted_bootstrap.py  test_weighted_cross_val.py  test_weighted_jackknife.py  test_weighted_split.py
tests/functional/conformal_estimators/: test_conformal_estimators_breast.py  test_conformal_estimators_fraud.py  test_conformal_estimators_ionosphere.py
tests/functional/conformal_estimators/test_data/: ionosphere.csv
tests/unit/: test_bootstrap_configuration.py  test_dataset_download.py  test_dataset_setup.py  test_evaluation_metrics.py  test_example_datasets.py  test_split_configuration.py  test_unsupported_detector.py  test_utils_aggregation.py  test_utils_statistical.py
unquad/: __init__.py
unquad/data/: load.py  loader.py
unquad/data/parquet/breast/: breast.parquet
unquad/data/parquet/ionosphere/: ionosphere.parquet
unquad/data/parquet/musk/: musk.parquet
unquad/data/parquet/thyroid/: thyroid.parquet
unquad/data/parquet/wbc/: wbc.parquet
unquad/datasets/: loader.py
unquad/datasets/parquet/mammography/: mammography.parquet
unquad/datasets/parquet/shuttle/: shuttle.parquet
unquad/enums/: adjustment.py  dataset.py  method.py
unquad/error/: forbidden_model.py
unquad/estimation/: __init__.py  base.py  conformal.py  evt_conformal.py  extreme_conformal.py  standard_conformal.py  weighted_conformal.py
unquad/estimation/properties/: configuration.py  parameterization.py
unquad/estimator/: configuration.py  conformal.py  conformal_estimator.py  detector.py  estimator.py  parameter.py  split_configuration.py
unquad/estimator/bootstrap/: bootstrap_config.py
unquad/estimator/split_config/: bootstrap_config.py
unquad/strategy/: __init__.py  base.py  bootstrap.py  cross_val.py  jackknife.py  split.py
unquad/utils/: aggregation.py  decorator.py  enums.py  load.py  metrics.py  multiplicity.py  statistical.py  validate_memory_cache.py
unquad/utils/data/: __init__.py  batch_generator.py  load.py  loader.py  online_generator.py  validate_memory_cache.py
unquad/utils/data/generator/: __init__.py  base.py  batch.py  online.py
unquad/utils/decorator/: performance.py
unquad/utils/enums/: adjustment.py  aggregation.py  dataset.py  strategy.py
unquad/utils/error/: forbidden_model.py
unquad/utils/func/: __init__.py
unquad/utils/stat/: __init__.py  aggregation.py  evt.py  extreme.py  metrics.py  statistical.py
