[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unquad"
version = "0.1.87"
description = "Conformal Anomaly Detection"
authors = [
  { name = "Oliver Hennhoefer", email = "oliver.hennhoefer@mail.de" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "numpy~=1.26.0",
    "pandas>=2.2.1",
    "scikit-learn>=1.6.1",
    "pyod~=2.0.3",
    "scipy>=1.13.0",
    "tqdm>=4.66.2",
    "pyarrow>=16.1.0",
]

[project.optional-dependencies]
dev = ["black"]
dl = ["tensorflow>=2.16.1", "torch>=2.2.2"]
all = ["black", "tensorflow>=2.16.1", "torch>=2.2.2"]

[project.urls]
"Homepage" = "https://github.com/OliverHennhoefer/unquad"
"Bugs" = "https://github.com/OliverHennhoefer/unquad/issues"
