[project]
name = "unquad"
version = "0.2"
description = "Conformal Anomaly Detection"
authors = [
  { name = "Oliver Hennhoefer", email = "oliver.hennhoefer@mail.de" },
]
maintainers = [
  { name = "Oliver Hennhoefer", email = "oliver.hennhoefer@mail.de" }
]
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
keywords = [
    "connformal inference",
    "anomaly detection",
    "uncertainty quantification",
    "false discovery rate"
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
requires-python = ">=3.12"
dependencies = [
    "numpy~=1.26.0",
    "pandas>=2.2.1",
    "scikit-learn>=1.6.1",
    "pyod~=2.0.3",
    "scipy>=1.13.0",
    "tqdm>=4.66.2",
    "pyarrow>=16.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pre-commit"
]
docs = [
    "sphinx",
    "furo",
    "sphinx-autoapi",
    "myst-parser"
]
dl = [
    "tensorflow>=2.16.1",
    "torch>=2.7.0"
]
all = [
    "black",
    "ruff",
    "pre-commit",
    "sphinx",
    "furo",
    "sphinx-autoapi",
    "myst-parser",
    "tensorflow>=2.16.1",
    "torch>=2.7.0"
]

[project.urls]
"Homepage" = "https://github.com/OliverHennhoefer/unquad"
"Bugs" = "https://github.com/OliverHennhoefer/unquad/issues"

[tool.black]
line-length = 88
target-version = [
    'py312'
]

extend-exclude ='''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.pants\.d
  | \.pytype
  | \.ruff_cache
  | \.svn
  | \.tox
  | \.venv
  | __pypackages__
  | _build
  | buck-out
  | build
  | dist
  | node_modules
  | venv
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"
src = [
    "."
]
include = [
    "*.py",
    "*.pyi",
    "*.ipynb",
    "**/pyproject.toml"
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint.per-file-ignores]
"unquad/estimation/conformal.py" = [
    "E402"
]
"unquad/estimation/weighted_conformal.py" = [
    "E402"
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors (excluding some stylistic ones handled by formatters)
    "F",  # Pyflakes
]
ignore = []
fixable = [
    "ALL"
]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
